--- a/_includes/post.html
+++ b/_includes/post.html
@@ -92,7 +92,7 @@
       </section>
 
       <section class="col-sm-6 author">
-        <img height="100" width="100" src="{{ site.BASE_PATH }}/images/ramses-avatar.png" class="img-rounded author-image" />
+        <img height="50%" width="50%" src="{{ site.BASE_PATH }}/images/ramses-avatar.png" class="img-rounded author-image" />
         <h4 class="section-title author-name">{{site.author.name}}</h4>
         <p class="author-bio">{{site.author.bio}}</p>
       </section>
