--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,7 +1,7 @@
 <! -- sidebar.html -->
 <header class="sidebar-header" role="banner">
 	<a href="{{ site.BASE_PATH }}/">
-		<img height="100" width="100" src="{{ site.BASE_PATH }}/images/ramses-avatar.png?s=150" class="img-circle" />
+		<img height="50%" width="50%" src="{{ site.BASE_PATH }}/images/ramses-avatar.png?s=150" class="img-circle" />
 	</a>
 	<h3 class="title">
         <a href="{{ site.BASE_PATH }}/">{{ site.title }}</a>
