--- a/_includes/post.html
+++ b/_includes/post.html
@@ -117,7 +117,7 @@
 	</div>
 	
 	<div class="col-sm-2 sidebar-2">
-	
+        {% include comments.html %}
 	</div>
 </article>
 <div class="clearfix"></div>
