--- a/_includes/post.html
+++ b/_includes/post.html
@@ -115,9 +115,12 @@
 
 		<hr>
 	</div>
-	
-	<div class="col-sm-2 sidebar-2">
+
+    <div class="col-sm-6">
         {% include comments.html %}
+    </div>
+
+    <div class="col-sm-2 sidebar-2">
 	</div>
 </article>
 <div class="clearfix"></div>
